--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <title>Title</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.3.2/umd/react.production.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.3.2/umd/react-dom.production.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+    <script type="text/babel" src="index.js"></script>
 </head>
 <body>
 <div id="app"></div>
